2014-06-14  Julien Bect  <julien.bect@supelec.fr>

	stk_options_set.m: Prevent persistent from being cleared.

	* misc/options/stk_options_set.m: Add a call to mlock to prevent
	the persistent variable from being cleared.

2014-05-15  Julien Bect  <julien.bect@supelec.fr>

	stk_model.m: Fix a fresh bug (my mistake).

	* core/stk_model.m: Restore proper default behaviour when
	nargin == 0.

	Merge /etc into /admin

	* etc/CODING_GUIDELINES: moved from
	* admin/CODING_GUIDELINES: moved to
	* etc/RELEASE_CHECKLIST: moved from
	* admin/RELEASE_CHECKLIST: moved to + modified
	* etc/octave-pkg/INDEX: moved from
	* admin/octave-pkg/INDEX: moved to
	* etc/octave-pkg/Makefile: moved from
	* admin/octave-pkg/Makefile: moved to
	* etc/octave-pkg/PKG_DEL.m: moved from
	* admin/octave-pkg/PKG_DEL.m: moved to
	* etc/octave-pkg/pkg_install_stk_and_generate_doc.m: moved from
	* admin/octave-pkg/pkg_install_stk_and_generate_doc.m: moved to
	* etc/octave-pkg/post_install.m: moved from
	* admin/octave-pkg/post_install.m: moved to
	* admin/description.txt: moved from
	* admin/octave-pkg/description.txt: moved to
	* admin/make_octave_package.m: modified
	* admin/make_release_targz.sh: modified
	* admin/stk_make_htmldoc.m: modified

2014-05-13  Julien Bect  <julien.bect@supelec.fr>

	stk_model.m: Accept function handles for covariance_type.

	* core/stk_model.m: Accept function handles for covariance_type.

2014-05-13  Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>

	Add a stk_length function

	* arrays/generic/stk_length.m: returns the length of an array
	* arrays/@stk_dataframe/stk_length.m: idem

2014-05-12  Julien Bect  <julien.bect@supelec.fr>

	stk_generate_samplepaths.m: Deal with duplicates in xt.

	* utils/stk_generate_samplepaths.m: Deal with duplicates in xt.

2014-05-08  Julien Bect  <julien.bect@supelec.fr>

	Move stk_model to core.

	* core/stk_model.m: formerly known as utils/stk_model.m
	* utils/stk_model.m: deleted

	Move utils/arrays one level up.
