@@ -2,7 +2,7 @@
 
 % Copyright Notice
 %
-%    Copyright (C) 2013 SUPELEC
+%    Copyright (C) 2013, 2014 SUPELEC
 %
 %    Author:  Julien Bect  <julien.bect@supelec.fr>
 
@@ -26,7 +26,7 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function opts = stk_options_set(varargin)
+function opts = stk_options_set (varargin)
 
 persistent options
 
@@ -39,6 +39,13 @@ switch nargin
     
     case 0, % nothing to do, just return the output
         
+    case 1, % reset        
+        if (ischar (varargin{1})) && strcmp (varargin{1}, 'default')
+            options = init_options ();
+        else
+            stk_error ('Syntax error', 'SyntaxError');
+        end
+        
     case 2,
         options.(varargin{1}) = varargin{2};
         
@@ -46,7 +53,7 @@ switch nargin
         options.(varargin{1}).(varargin{2}) = varargin{3};
         
     otherwise
-        stk_error('Incorrect number of input arguments.', 'SyntaxError');
+        stk_error ('Incorrect number of input arguments.', 'SyntaxError');
         
 end
 
@@ -55,9 +62,9 @@ opts = options;
 end % function stk_options_set
 
 
-function opts = init_options()
+function opts = init_options ()
 
-opts = struct();
+opts = struct ();
 
 opts.stk_sf_matern.min_size_for_parallelization = 1e5;
 opts.stk_sf_matern.min_block_size = 1e3;
